[tool.poetry]
name = "cibo"
version = "0.0.0"
description = "An experimental MUD server, written in Python. Object-oriented and event driven."
authors = ["Albert Wesker <albert.wesker@umbrellacorp.io>"]
license = "MIT"

[tool.poetry.dependencies]
marshmallow = "3.19.0"
passlib = "1.7.4"
peewee = "3.16.2"
python = "3.11.4"
python-dotenv = "1.0.0"
rich = "13.4.2"

[tool.poetry.dev-dependencies]
black = "23.3.0"
coverage = "7.2.5"
pylint = "2.17.4"
pytest = "7.3.1"
pytest-cov = "4.0.0"
pytest-reverse = "1.5.0"
pytest-xdist = "3.2.1"
python-dotenv = "1.0.0"
safety = "2.3.1"

[tool.coverage.run]
source = ["."]
branch = true
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*/__init__.py",
    "cibo/tests/*"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pytest: no cover",
    "import"
]

[tool.black]
target_version = ["py38"]

[tool.isort]
include_trailing_comma = true
line_length = 88
multi_line_output = 3
profile = "black"
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]

[tool.pylint.master]
ignore = [
    "*/.git/*",
    "*/.serverless/*",
    "*/node_modules/*",
    "pyproject.toml"
]

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 8

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "fixme",
    "too-few-public-methods",
    "too-many-instance-attributes",
    "unnecessary-pass",
    "unsubscriptable-object"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
